challenge: duplicate zeros - approach 1